embedded and separate nats server working
